# SpotObserver

./: .gitmodules  CMakeLists.txt  README.md  ruff.toml  vcpkg-configuration.json  vcpkg.json
.github/scripts/ruff/: build-tables.sh  collect-stats.sh  lib.sh
.github/workflows/: mypy.yml  ruff-commands.yml  ruff.yml
PySpotObserver/: .gitignore  QUICKSTART.md  README.md  basic_streaming_copy.py  requirements.txt  setup.py
PySpotObserver/examples/: README.md  async_streaming.py  basic_streaming.py  benchmark_allocation.py  common_cli.py  config_example.yaml  multi_stream.py
PySpotObserver/pyspotobserver/: __init__.py  camera_stream.py  color_correction.py  config.py  connection.py  depth_registration.py  icp_align.py  stitch.py  vision_pipeline.py
PySpotObserver/pyspotobserver/tools/: capture_dual.py  check_graphnav_status.py
PySpotObserver/pyspotobserver/tools/captures/: 128.148.138.21_pose_body.npy  128.148.138.22_pose_body.npy  robotA_frontleft_calib.json  robotA_frontleft_depth.npy  robotA_frontright_calib.json  robotA_frontright_depth.npy  robotA_pose.npy  robotB_frontleft_calib.json  robotB_frontleft_depth.npy  robotB_frontright_calib.json  robotB_frontright_depth.npy  robotB_pose.npy
PySpotObserver/tests/: __init__.py  test_config.py  test_depth_registration.py  test_depth_registration_robot.py  test_icp_align.py  test_streaming_lifecycle.py
include/: spot-observer.h
src/: cuda_kernels.cu  dumper.cpp  load_image_to_cuda.cu  model.cpp  spot-camera-stream.cpp  spot-connection.cpp  spot-observer.cpp  unity-cuda-interop.cpp  vision-pipeline.cpp
src/include/: cuda_kernels.cuh  dumper.h  logger.h  model.h  spot-connection.h  unity-cuda-interop.h  utils.h  vision-pipeline.h
tests/: CMakeLists.txt
tests/integ-test/: CMakeLists.txt  integ-test.cpp
tests/integ-test-dx12/: CMakeLists.txt  integ-test-dx12.cpp  interop-upload-test.cpp
tests/standalone-tests/: CMakeLists.txt  spot-camera-stream-multithreaded.cpp  spot-camera-stream.cpp
